# hatch-pip-deepfreeze

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/hatch_pip_deepfreeze/: hooks.py  plugin.py
