[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hatch-pip-deepfreeze"
description = 'Lock hatch environments using pip-deepfreeze'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Stéphane Bidoul", email = "stephane.bidoul@acsone.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Hatch",
]
dependencies = ["hatch", "pip-deepfreeze"]
dynamic = ["version"]

[project.entry-points.hatch]
pip-deepfreeze = "hatch_pip_deepfreeze.hooks"

[project.urls]
Documentation = "https://github.com/sbidoul/hatch-pip-deepfreeze#readme"
Issues = "https://github.com/sbidoul/hatch-pip-deepfreeze/issues"
Source = "https://github.com/sbidoul/hatch-pip-deepfreeze"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=hatch_pip_deepfreeze --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
